# RiverAI

./: Dockerfile.bot  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml  requirements.txt
 .github/workflows/: deploy.yml
.github/workflows/: deploy.yml
bot_app/: config.py  main.py
bot_app/database/: __init__.py  db.py
bot_app/handlers/: chatgpt.py  generation.py  settings.py  start.py  students.py  subscription.py
bot_app/keyboards/: chat_menu.py  main_menu.py  settings.py  students.py
bot_app/middlewares/: auth.py
bot_app/utils/: encryption.py
db_server/: init_db.sql
infrastructure/bot/: docker-compose.yml
infrastructure/db/: docker-compose.yml
infrastructure/queue/: docker-compose.yml
infrastructure/worker/: docker-compose.yml
queue/: docker-compose.yml
queue_server/: broker.py  main.py  requirements.txt  scheduler.py
queue_server/rabbitmq/: definitions.json  rabbitmq.conf
queue_server/redis/:  redis.conf
scripts/: setup_app.sh  setup_queue.sh
ssh_config_template/: config
templates/: plan_template.tex  report_template.tex  tasks_template.tex
worker/: config.py  consumer.py  db.py  docker-compose.yml  main.py  redis_cache.py
worker/consumers/: task_consumer.py
worker/services/: gpt_service.py  latex_service.py  storage_service.py
worker/tasks/: chat_gpt.py  check_homework.py  generate_plan.py  generate_tasks.py
worker/utils/: encryption.py
